# CMakeList.txt : CMake project for Parallel_Sum, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Parallel_Sum "Parallel_Sum.cpp" "Parallel_Sum.h")

# TODO: Add tests and install targets if needed.
